--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,9 @@
 {
-   "extends": "@tsconfig/node12/tsconfig.json",
-   "compilerOptions": {
-     "preserveConstEnums": true
-   },
-   "include": ["*"],
-   "exclude": ["node_modules"]
- }
- 
-
- 
+  "extends": "@tsconfig/node12/tsconfig.json",
+  "compilerOptions": {
+    "noImplicitAny": false,
+    "preserveConstEnums": true
+  },
+  "include": ["*"],
+  "exclude": ["node_modules"]
+}
