--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/oslabs-beta/turnstyl#readme",
   "dependencies": {
     "@google-cloud/bigquery": "^5.8.0",
-    "@types/node": "^16.7.1"
+    "@tsconfig/node12": "^1.0.9",
+    "@types/node": "^16.7.1",
+    "js-yaml": "^4.1.0"
   }
 }
