configuration change for NPM package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,6 @@
     "noImplicitAny": false,
     "preserveConstEnums": true
   },
-  "include": ["*", "src/index.ts"],
+  "include": ["index.ts", "turnstyl.ts", "schemaQuery.ts"],
   "exclude": ["node_modules"]
 }
