--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is a readme",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "prepare": "npm link turnstyl"
   },
   "repository": {
     "type": "git",
@@ -18,8 +19,16 @@
   "homepage": "https://github.com/oslabs-beta/turnstyl#readme",
   "dependencies": {
     "@google-cloud/bigquery": "^5.8.0",
+    "@jest/types": "^27.1.0",
     "@tsconfig/node12": "^1.0.9",
     "@types/node": "^16.7.1",
     "js-yaml": "^4.1.0"
+  },
+  "devDependencies": {
+    "@babel/preset-typescript": "^7.15.0",
+    "@types/jest": "^27.0.1",
+    "jest": "^27.1.0",
+    "ts-jest": "^27.0.5",
+    "typescript": "^4.4.2"
   }
 }
