--- a/turnstyl.config.yaml
+++ b/turnstyl.config.yaml
@@ -2,3 +2,7 @@ version: '1.0'
 rules:
   - compare-objects
 google_service_credentials: './bigQueryServiceCredentials.json'
+big_query_project_name: 'probable-cove-323115'
+big_query_dataset_name: 'turnstyl_test_events'
+target_tables:
+  bankTransfers:
