Add js directories to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ bigQueryServiceCredentials.json
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
+lib/
+jest.config.js
 
 # Runtime data
 pids
@@ -120,5 +122,3 @@ dist
 .pnp.*
 # test platform
 test/
-
-
