--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,13 @@
 {
   "extends": "@tsconfig/node12/tsconfig.json",
   "compilerOptions": {
+    "target": "ES2015",
+    "strict": true,
+    "declaration": true,
     "noImplicitAny": false,
-    "preserveConstEnums": true
+    "preserveConstEnums": true,
+    "outDir": "./lib/esm"
   },
-  "include": ["index.ts", "turnstyl.ts", "schemaQuery.ts"],
+  "include": ["index.ts", "./src/turnstyl.ts", "./src/schemaQuery.ts"],
   "exclude": ["node_modules"]
 }
