--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "files": [
     "lib/"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "test": "jest",
     "tsc": "tsc -p tsconfig.json && tsc -p tsconfig-cjs.json",
