Auto bump version num

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ jobs:
     before_install: # before npm install
         - "echo 'INSTALLING npm packages'"
         - npm run install
+        - "echo 'Bumping version number'"
+        - npm --no-git-tag-version version patch
     script: # before running test
         - "echo 'RUNNING Jest tests'"
         - npm jest
