--- a/.travis.yml
+++ b/.travis.yml
@@ -11,16 +11,15 @@ jobs:
       before_install: # before npm install
         - "echo 'INSTALLING npm packages'"
         - npm install
-        - "echo 'Bumping version number'"
+        - echo 'Bumping version number'
         - npm --no-git-tag-version version patch
       script: # before running test
-        - "echo 'RUNNING Jest tests'"
-        - 'echo '{"type": "service_account","project_id": $TEST_PROJECT_ID,"private_key_id": $TEST_PRIVATE_KEY_ID,"private_key": $TEST_PRIVATE_KEY,"client_email": $TEST_CLIENT_EMAIL,"client_id": $TEST_CLIENT_ID,"auth_uri": "https://accounts.google.com/o/oauth2/auth","token_uri": "https://oauth2.googleapis.com/token","auth_provider_x509_cert_url": "https://www.googleapis.com/oauth2/v1/certs","client_x509_cert_url": $TEST_CLIENT_X509_CERT_URL}' > bigQueryServiceCredentials.json'
+        - echo 'RUNNING Jest tests'
         - ls
         - npm test
       after_success: # after test is ru
-        - "echo 'Travis CI checks and Jest tests have passed!!'"
-        - "echo 'Deploying to NPM'"
+        - echo 'Travis CI checks and Jest tests have passed!!'
+        - echo 'Deploying to NPM'
       deploy:
         on:
           branch: dev
