Update travis yml with text test

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,9 @@ jobs:
         - "echo 'Bumping version number'"
         - npm --no-git-tag-version version patch
       script: # before running test
-        - "echo 'RUNNING Jest tests - NO TESTS CURRENTLY RUNNING DUE TO BUG'"
+        - echo 'RUNNING Jest tests' > test.txt
+        - ls
+        - npm jest
       after_success: # after test is ru
         - "echo 'Travis CI checks and Jest tests have passed!!'"
         - "echo 'Deploying to NPM'"
