--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ jobs:
         - npm --no-git-tag-version version patch
       script: # before running test
         - echo 'RUNNING Jest tests'
-        - npm jest
+        - npm test
       after_success: # after test is ru
         - echo 'Travis CI checks and Jest tests have passed!!'
         - echo 'Deploying to NPM'
