--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tsconfig/node12": "^1.0.9",
     "@types/node": "^16.7.1",
     "app-root-path": "^3.0.0",
+    "dotenv": "^10.0.0",
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
