--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "@types/node": "^16.7.1",
     "app-root-path": "^3.0.0",
     "dotenv": "^10.0.0",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.15.0",
